--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,7 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
+/* Background images */
 .hero-img {
     background: url('images/hero.png') no-repeat center;
     background-size: cover;
