--- a/src/index.css
+++ b/src/index.css
@@ -29,22 +29,30 @@ body {
 }
 
 .strength-img {
-    background: url('images/strength.png') no-repeat center;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.2) 0%, rgba(0, 0, 0, 0.2) 100%),
+        url('images/strength.png') lightgray 50% no-repeat;
     background-size: cover;
+    background-position: center;
 }
 
 .boxing-img {
-    background: url('images/boxing.png') no-repeat center;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.2) 0%, rgba(0, 0, 0, 0.2) 100%),
+        url('images/boxing.png') lightgray 50% no-repeat;
     background-size: cover;
+    background-position: center;
 }
 .cardio-img {
-    background: url('images/cardio.png') no-repeat center;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.2) 0%, rgba(0, 0, 0, 0.2) 100%),
+        url('images/cardio.png') lightgray 50% no-repeat;
     background-size: cover;
+    background-position: center;
 }
 
 .yoga-img {
-    background: url('images/yoga.png') no-repeat center;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.2) 0%, rgba(0, 0, 0, 0.2) 100%),
+        url('images/yoga.png') lightgray 50% no-repeat;
     background-size: cover;
+    background-position: center;
 }
 
 .modal-img {
